--- a/website_movie_site/templates/movabout.html
+++ b/website_movie_site/templates/movabout.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -23,6 +24,8 @@
   <link rel="stylesheet" href="../static/css/snow.css">
   <link rel="stylesheet" href="../static/css/navbar.css">
   <link rel="stylesheet" href="../static/css/search_navbar.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/comment.css">
+  <link rel="stylesheet" href="../static/css/card_right_side.css">
   <link rel="stylesheet" href="../static/css/footer.css">
   <link rel="stylesheet" href="../static/css/movabout.css">
 </head>
@@ -723,10 +726,360 @@
     <section>
       <div class="main">
         <div class="left">
-          
+          <div class="topbar">
+            <div class="img">
+              <img src="../static/images/mov1.jpg">
+            </div>
+            <div class="movname">
+              <div class="name">
+                <p>After</p>
+              </div>
+              <div class="small_detail">
+                <p>2010 . 150 min . Adventure</p>
+              </div>
+              <div class="rating">
+                <div class="rotten">
+                  <img src="../static/images/rotten_tomato.png">
+                  <p>Rotten Tomato</p>
+                  <p>100%</p>
+                </div>
+                <div class="imdb">
+                  <img src="../static/images/imdb_logo.png">
+                  <p>IMDb</p>
+                  <p>7.5</p>
+                </div>
+                <div class="our">
+                  <img src="../static/images/log_t_final (2).png">
+                  <p>Rating</p>
+                  <p>6</p>
+                </div>
+              </div>
+              <div class="btn">
+                <a href=""><i class="fas fa-share-alt"></i></a>
+                <a href=""><i class="fas fa-heart"></i></a>
+                <a href=""><i class="fas fa-play"></i></a>
+                <a href=""><i class="fas fa-download"></i></a>
+                <a href=""><i class="fas fa-thumbtack"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="descri">
+            <h1>Description</h1>
+            <br>
+            <p>
+            The movie opens with a voice-over by a teenage girl talking about how moments in your life that can define you while it shows a montage of shots of a couple spending time together. The girl says everything in her life was simple before him, and now it's just after.
+            Tessa (Josephine Langford) wakes up from a dream and starts to pack her room to leave for college. She is joined by her mother, Carol (Selma Blair) and her BF (best friend), Noah (Dylan Arnold) in the kitchen downstairs. Her mother is listing off items that she thinks that Tessa will need while Tessa reminds her that she is going to college and not a survival camp. Noah interjects and says he can drive up there and drop anything off if she forgets it.
+            The next scene shows them driving through various city settings until they get to her new University. Carol, Noah, and Tessa make their way through the crowded dorm halls looking for her new room, B-22. They open the door and are met by loud music and two girls sitting on the bed. Tessa introduces herself to her new roommate Steph (Khadijha Red Thunder) who is vaping. Steph introduces Tessa to Tristan (Pia Mia). Steph makes a remark about being unsure about having a freshman roommate, but she says it should be cool... she'll be her spirit guide. Tristan says that they can get Tessa into all the best places even without a fake ID. Carol leaves the room upset and demands that they ask for a room change since the room reeked of weed. She doesn't want these girls to distract Tessa from her schoolwork. Tessa reminds her that she is responsible and it won't be an issue. She says goodbye to both Noah and her mom. Tessa returns to her room, and Tristan is gone. Steph and Tessa chat about freaking out Carol, how Noah is Tessa's BF (not her brother as Steph believed) and still a senior in High school and Tessa's rather large book collection. Steph leaves, and Tessa unpacks. She is shown later in bed texting with Noah about starting her 1st day the next morning.
+            Tessa leaves her dorm early in the morning, and head's to her 1st class across campus. She meets Landon (Shane Paul McGhie) outside of a locked classroom. They are the first students to arrive. A professor comes by shortly and opens the door for them. It is an Econ 101 course. They chit chat about their majors and being first year students.</p>
+          </div>
+          <div class="comments">
+            <h1>Comments</h1>
+            <div class="comments-container">
+              <ul id="comments-list" class="comments-list">
+                <li>
+                  <div class="comment-main-level">
+                    <!-- Avatar -->
+                    <div class="comment-avatar"><img src="http://i9.photobucket.com/albums/a88/creaticode/avatar_1_zps8e1c80cd.jpg" alt=""></div>
+                    <div class="comment-box">
+                      <div class="comment-head">
+                        <h6 class="comment-name by-author"><a href="http://creaticode.com/blog">Agustin Ortiz</a></h6>
+                        <span>hace 20 minutos</span>
+                        <i class="fa fa-reply"></i>
+                        <i class="fa fa-heart"></i>
+                      </div>
+                      <div class="comment-content">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                      </div>
+                    </div>
+                  </div>
+                  <ul class="comments-list reply-list">
+                    <li>
+                      <div class="comment-avatar"><img src="http://i9.photobucket.com/albums/a88/creaticode/avatar_2_zps7de12f8b.jpg" alt=""></div>
+                      <div class="comment-box">
+                        <div class="comment-head">
+                          <h6 class="comment-name"><a href="http://creaticode.com/blog">Lorena Rojero</a></h6>
+                          <span>hace 10 minutos</span>
+                          <i class="fa fa-reply"></i>
+                          <i class="fa fa-heart"></i>
+                        </div>
+                        <div class="comment-content">
+                          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                        </div>
+                      </div>
+                    </li>
+
+                    <li>
+                      <div class="comment-avatar"><img src="http://i9.photobucket.com/albums/a88/creaticode/avatar_1_zps8e1c80cd.jpg" alt=""></div>
+                      <div class="comment-box">
+                        <div class="comment-head">
+                          <h6 class="comment-name by-author"><a href="http://creaticode.com/blog">Agustin Ortiz</a></h6>
+                          <span>hace 10 minutos</span>
+                          <i class="fa fa-reply"></i>
+                          <i class="fa fa-heart"></i>
+                        </div>
+                        <div class="comment-content">
+                          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <div class="comment-main-level">
+                    <div class="comment-avatar"><img src="http://i9.photobucket.com/albums/a88/creaticode/avatar_2_zps7de12f8b.jpg" alt=""></div>
+                    <div class="comment-box">
+                      <div class="comment-head">
+                        <h6 class="comment-name"><a href="http://creaticode.com/blog">Lorena Rojero</a></h6>
+                        <span>hace 10 minutos</span>
+                        <i class="fa fa-reply"></i>
+                        <i class="fa fa-heart"></i>
+                      </div>
+                      <div class="comment-content">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                      </div>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <form>
+                <div class="row">
+                  <div class="col-25">
+                    <label for="Your Comment">Your Comment</label>
+                  </div>
+                  <div class="col-75">
+                    <textarea id="subject" name="subject" placeholder="Write something.." ></textarea>
+                  </div>
+                  <div class="col-25">
+                    <input type="submit" value="Post">
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="similarmov">
+            <h1>Similar Movie's</h1>
+            <br>
+            <div class="similar">
+              <div class="card">
+                <img src="../static/images/download.jpeg" alt="" />
+                <div class="descriptions">
+                  <h1>John Wick 3</h1>
+                  <p>
+                    After gunning down a member of the High Table -- the shadowy
+                    international assassin's guild -- legendary hit man John
+                    Wick finds himself stripped of the organization's protective
+                    services. Now stuck with a $14 million bounty on his head,
+                    Wick must fight his way through the streets of New York as
+                    he becomes the target of the world's most ruthless killers.
+                  </p>
+                  <div class="buttons2">
+                    <button><i class="fas fa-share-alt"></i></button>
+                    <button><i class="fas fa-heart"></i></button>
+                    <button><i class="fas fa-comment-alt"></i></button>
+                    <button><i class="far fa-bookmark"></i></button>
+                  </div>
+                  <div class="buttons">
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Trailer
+                    </a>
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Movie
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../static/images/download.jpeg" alt="" />
+                <div class="descriptions">
+                  <h1>John Wick 3</h1>
+                  <p>
+                    After gunning down a member of the High Table -- the shadowy
+                    international assassin's guild -- legendary hit man John
+                    Wick finds himself stripped of the organization's protective
+                    services. Now stuck with a $14 million bounty on his head,
+                    Wick must fight his way through the streets of New York as
+                    he becomes the target of the world's most ruthless killers.
+                  </p>
+                  <div class="buttons2">
+                    <button><i class="fas fa-share-alt"></i></button>
+                    <button><i class="fas fa-heart"></i></button>
+                    <button><i class="fas fa-comment-alt"></i></button>
+                    <button><i class="far fa-bookmark"></i></button>
+                  </div>
+                  <div class="buttons">
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Trailer
+                    </a>
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Movie
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../static/images/download.jpeg" alt="" />
+                <div class="descriptions">
+                  <h1>John Wick 3</h1>
+                  <p>
+                    After gunning down a member of the High Table -- the shadowy
+                    international assassin's guild -- legendary hit man John
+                    Wick finds himself stripped of the organization's protective
+                    services. Now stuck with a $14 million bounty on his head,
+                    Wick must fight his way through the streets of New York as
+                    he becomes the target of the world's most ruthless killers.
+                  </p>
+                  <div class="buttons2">
+                    <button><i class="fas fa-share-alt"></i></button>
+                    <button><i class="fas fa-heart"></i></button>
+                    <button><i class="fas fa-comment-alt"></i></button>
+                    <button><i class="far fa-bookmark"></i></button>
+                  </div>
+                  <div class="buttons">
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Trailer
+                    </a>
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Movie
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../static/images/download.jpeg" alt="" />
+                <div class="descriptions">
+                  <h1>John Wick 3</h1>
+                  <p>
+                    After gunning down a member of the High Table -- the shadowy
+                    international assassin's guild -- legendary hit man John
+                    Wick finds himself stripped of the organization's protective
+                    services. Now stuck with a $14 million bounty on his head,
+                    Wick must fight his way through the streets of New York as
+                    he becomes the target of the world's most ruthless killers.
+                  </p>
+                  <div class="buttons2">
+                    <button><i class="fas fa-share-alt"></i></button>
+                    <button><i class="fas fa-heart"></i></button>
+                    <button><i class="fas fa-comment-alt"></i></button>
+                    <button><i class="far fa-bookmark"></i></button>
+                  </div>
+                  <div class="buttons">
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Trailer
+                    </a>
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Movie
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../static/images/download.jpeg" alt="" />
+                <div class="descriptions">
+                  <h1>John Wick 3</h1>
+                  <p>
+                    After gunning down a member of the High Table -- the shadowy
+                    international assassin's guild -- legendary hit man John
+                    Wick finds himself stripped of the organization's protective
+                    services. Now stuck with a $14 million bounty on his head,
+                    Wick must fight his way through the streets of New York as
+                    he becomes the target of the world's most ruthless killers.
+                  </p>
+                  <div class="buttons2">
+                    <button><i class="fas fa-share-alt"></i></button>
+                    <button><i class="fas fa-heart"></i></button>
+                    <button><i class="fas fa-comment-alt"></i></button>
+                    <button><i class="far fa-bookmark"></i></button>
+                  </div>
+                  <div class="buttons">
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Trailer
+                    </a>
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Movie
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../static/images/download.jpeg" alt="" />
+                <div class="descriptions">
+                  <h1>John Wick 3</h1>
+                  <p>
+                    After gunning down a member of the High Table -- the shadowy
+                    international assassin's guild -- legendary hit man John
+                    Wick finds himself stripped of the organization's protective
+                    services. Now stuck with a $14 million bounty on his head,
+                    Wick must fight his way through the streets of New York as
+                    he becomes the target of the world's most ruthless killers.
+                  </p>
+                  <div class="buttons2">
+                    <button><i class="fas fa-share-alt"></i></button>
+                    <button><i class="fas fa-heart"></i></button>
+                    <button><i class="fas fa-comment-alt"></i></button>
+                    <button><i class="far fa-bookmark"></i></button>
+                  </div>
+                  <div class="buttons">
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Trailer
+                    </a>
+                    <a>
+                      <i class="fab fa-youtube"></i>
+                      Movie
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="seemore">
+              <a href="">See More <i class="fas fa-forward"></i></a>
+            </div>
+          </div>
         </div>
         <div class="right">
-          
+          <div class="cate">
+            <h1>Categories</h1>
+            <ul>
+              <li><a href="">first item</a></li>
+              <li><a href="">second item</a></li>
+              <li><a href="">third item</a></li>
+              <li><a href="">Fee</a></li>
+              <li><a href="">Fi</a></li>
+              <li><a href="">Fo</a></li>
+              <li><a href="">Fum</a></li>
+              <li><a href="">Fee</a></li>
+              <li><a href="">Fi</a></li>
+              <li><a href="">Fo</a></li>
+              <li><a href="">Fum</a></li>
+            </ul>
+          </div>
+          <div class="trendnow">
+            <h1>Trending Now</h1>
+            <ol>
+              <li>Fee</li>
+              <li>Fi</li>
+              <li>Fo</li>
+              <li>Fum</li>
+              <li>Fee</li>
+              <li>Fi</li>
+              <li>Fo</li>
+              <li>Fum</li>
+              <li>Fee</li>
+              <li>Fi</li>
+            </ol>
+          </div>
         </div>
       </div>
     </section>
@@ -778,7 +1131,6 @@
 </body>
 
 </html>
-
 
 
 
