--- a/talkies/templates/index.html
+++ b/talkies/templates/index.html
@@ -1595,7 +1595,7 @@
           <div class="center-align">
             <div class="book">
               <div id="pages" class="pages">
-                <div class="page" style="background:url("{% static 'images/book_cov.png' %});background-repeat: no-repeat;background-position: center;background-size: cover;">
+                <div class="page" style="background:url("images/book_cov.png" );background-repeat: no-repeat;background-position: center;background-size: cover;">
                   <!-- <p>
                     Open Me, <br />please! <br /><i
                       style="margin-top: 10px"
@@ -3094,8 +3094,8 @@
             <img src="{% static 'images/logo_final.png' %}">
             <p class="footer-links">
               <a href="index.html" class="link-1">Home</a>
-              <a href="About.html">About</a>
-              <a href="FAQ.html">Faq</a>
+              <a href="/about">About</a>
+              <a href="/faq">Faq</a>
               <a href="Feedback-FAQ.html">Contact</a>
               <a href="Feedback-FAQ.html">Feedback</a>
             </p>
