--- a/talkies/templates/FAQ.html
+++ b/talkies/templates/FAQ.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +9,7 @@
   <link
       rel="icon"
       type="image/ico"
-      href="../static/images/log_t_final (2).png"
+      href="{% static 'images/log_t_final (2).png' %}"
     />
   <link
   rel="stylesheet"
@@ -18,21 +19,21 @@
       src="https://kit.fontawesome.com/9e6a57f71b.js"
       crossorigin="anonymous"
     ></script>
-  <link rel="stylesheet" href="../static/css/loading.css">
-  <link rel="stylesheet" href="../static/css/initial.css">
-  <link rel="stylesheet" href="../static/css/snow.css">
-  <link rel="stylesheet" href="../static/css/navbar.css">
-  <link rel="stylesheet" href="../static/css/search_navbar.css">
-  <link rel="stylesheet" href="../static/css/footer.css">
-  <link rel="stylesheet" type="text/css" href="../static/css/Feedback-FAQ.css">
-  <!-- <link rel="stylesheet" type="text/css" href="../static/css/FAQ.css"> -->
+  <link rel="stylesheet" href="{% static 'css/loading.css' %}">
+  <link rel="stylesheet" href="{% static 'css/initial.css' %}">
+  <link rel="stylesheet" href="{% static 'css/snow.css' %}">
+  <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+  <link rel="stylesheet" href="{% static 'css/search_navbar.css' %}">
+  <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/Feedback-FAQ.css' %}">
+  <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/FAQ.css"> -->
 </head>
 
 <body onload="loadingfunction()">
     <div id="loading"></div>
     <div class="navbar">
       <div class="logo">
-          <a href="index.html"><img src="../static/images/logo_final.png" alt=""></a>
+          <a href="/"><img src="{% static 'images/logo_final.png' %}" alt=""></a>
       </div>
       <div class="search-container">
         <form action="">
@@ -44,10 +45,10 @@
           <ul>
               <li>
                   <div class="dropdown rolling">
-                      <a href="index.html" class="dropbtn rolling_icon">
+                      <a href="/" class="dropbtn rolling_icon">
                           <i class="fas fa-home"></i>
                       </a>
-                      <span> <a href="index.html">Home</a></span>
+                      <span> <a href="/">Home</a></span>
                   </div>
               </li>
               <li>
@@ -58,7 +59,7 @@
                           <div class="row">
                               <div class="card_drop 1">
                                   <div class="card_drop_image">
-                                      <img src="../static/images/wallpaper_1.jpg" />
+                                      <img src="{% static 'images/wallpaper_1.jpg' %}" />
                                   </div>
                                   <div class="card_drop_title title-white">
                                       <a href="search_page.html">Link 1</a>
@@ -797,10 +798,10 @@
         <footer class="footer-distributed">
           <div class="footer-left">
             <!-- <h3>Company<span>logo</span></h3> -->
-            <img src="../static/images/logo_final.png">
+            <img src="{% static 'images/logo_final.png' %}">
             <p class="footer-links">
-              <a href="index.html" class="link-1">Home</a>
-              <a href="About.html">About</a>
+              <a href="/" class="link-1">Home</a>
+              <a href="/about">About</a>
               <a href="FAQ.html">Faq</a>
               <a href="Feedback-FAQ.html">Contact</a>
               <a href="Feedback-FAQ.html">Feedback</a>
@@ -836,9 +837,9 @@
         </footer>
     </section>
   </div>
-  <script src="../static/js/navbar.js"></script>
-  <script src="../static/js/loading.js"></script>
-  <script src="../static/js/accordion.js"></script>
+  <script src="{% static 'js/navbar.js' %}"></script>
+  <script src="{% static 'js/loading.js' %}"></script>
+  <script src="{% static 'js/accordion.js' %}"></script>
 </body>
 
 </html>
